--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -26,7 +26,7 @@ header h1 { position: absolute; top: 35px; left: -10px; }
 
 section { background: #efebe3; padding: 0 0 60px 0; }
 
-footer { position: relative; background: #824013; margin: 40px 0 0 0; padding: 50px 0 20px 0; color: #fff; font: 18px/27px "MerriweatherLight", Arial, sans-serif; }
+footer { position: relative; background: #824013; margin: 40px 0 0 0; padding: 50px 0 20px 0; color: #fff; font: 14px/21px "MerriweatherLight", Arial, sans-serif; }
 
 footer:before { content: ''; position: absolute; top: -70px; left: 0; height: 50px; display: block; width: 100%; background: #efebe3; transform: rotate(-1deg); -ms-transform: rotate(-1deg); /* IE 9 */ -moz-transform: rotate(-1deg); /* Firefox */ -webkit-transform: rotate(-1deg); /* Safari and Chrome */ -o-transform: rotate(-1deg); /* Opera */ }
 
@@ -180,11 +180,11 @@ aside { margin-top: 94px; font: 14px/21px "MerriweatherRegular", Arial, sans-ser
 ----------------------------------------------------------------------------*/
 .skull { position: absolute; bottom: 20px; right: 70px; }
 
+footer p, footer ul { font: 14px/21px "MerriweatherRegular", Arial, sans-serif; }
+
 footer h3 { color: #F4DCAC; }
 
 .respect a, .respect a:visited { text-decoration: none; }
-
-.respect { text-align: center; }
 
 #latest_tweet { margin-top: 50px; }
 
