--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -313,8 +313,28 @@ span.total-discount, span.total-shipping { font-weight: bold; }
   footer { text-align: center; }
   .skull { display: none; }
   .profile-img, .commissions section img, .entry-body img { display: block; float: none; width: 80% !important; margin: 10px auto; padding: 4px; background: #fff; border: 1px solid #000; }
-  .portfolio-detail img { width: 90%; margin: 0 auto; }
-  article h1 { font-size: 1.4em; } }
+  .portfolio-large { width: 90%; margin: 0 auto; }
+  article h1 { font-size: 1.4em; }
+  .journal-excerpt { margin-bottom: 10px; padding-bottom: 20px; min-height: 400px; }
+  label { float: none; display: block; width: 80% !important; }
+  form input[type=text], form input[type=password] { display: block; width: 250px; padding: 3px 8px; color: #333; border: 1px solid #000; }
+  .formrow { width: 92%; }
+  form textarea { padding: 3px 8px; width: 250px; height: 90px; color: #333; border: 1px solid #000; } }
 /* #Mobile (Landscape)
 ================================================== */
 /* Note: Design for a width of 480px */
+@media only screen and (min-width: 480px) and (max-width: 767px) { .home-banner img { width: 420px; }
+  p, ul { font-size: 0.9em; }
+  .portfolio-thumbs img { margin: 2px !important; width: 120px; }
+  .bike { display: none; }
+  header { height: 140px; }
+  header h1 img { width: 440px; }
+  header h1 { top: 10px; left: 0; }
+  header:after { content: ''; position: absolute; top: 110px; left: 0; height: 90px; display: block; width: 100%; background: #efebe3; transform: rotate(1deg); -ms-transform: rotate(1deg); /* IE 9 */ -moz-transform: rotate(1deg); /* Firefox */ -webkit-transform: rotate(1deg); /* Safari and Chrome */ -o-transform: rotate(1deg); /* Opera */ }
+  .navbar a { font-size: 16px; }
+  footer { text-align: center; }
+  .skull { display: none; }
+  .profile-img, .commissions section img, .entry-body img { float: none; margin: 10px auto; padding: 4px; background: #fff; border: 1px solid #000; }
+  .portfolio-large { width: 90%; margin: 0 auto; }
+  article h1 { font-size: 1.4em; }
+  .journal-excerpt { margin-bottom: 10px; padding-bottom: 20px; min-height: 400px; } }
