fixed oddities in iPad layout

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -890,6 +890,16 @@ span.total-shipping {
             width: 768px;
         }
 
+        .navbar a { font-size: 18px; }
+        /* @@@TODO|FIXME */
+        .social { display: none; }
+        footer { text-align: center; }
+        .skull { display: none; }
+
+
+        .portfolio-detail img { width: 90%; }
+
+
         .thumb-6,
         .thumb-12,
         .thumb-18,
