--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -295,6 +295,12 @@ span.total-discount, span.total-shipping { font-weight: bold; }
 ================================================== */
 /* Note: Design for a width of 768px */
 @media only screen and (min-width: 768px) and (max-width: 959px) { .home-banner img { width: 768px; }
+  .navbar a { font-size: 18px; }
+  /* @@@TODO|FIXME */
+  .social { display: none; }
+  footer { text-align: center; }
+  .skull { display: none; }
+  .portfolio-detail img { width: 90%; }
   .thumb-6, .thumb-12, .thumb-18, .thumb-24, .thumb-30 { margin-right: 15px !important; }
   .portfolio-thumbs img { margin: 0 15px 10px 0; }
   .thumb-5, .thumb-10, .thumb-15, .thumb-20 { margin-right: 0 !important; } }
