--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -2,7 +2,7 @@
 
 {% block body-class %}portfolio-body{% endblock %}
 
-{% block page_title %}Portfolio of Greg Newman's Recent Work{% endblock %}
+{% block page_title %}{% if tag %}Tagged Portfolio images matching {{ tag }}{% else %}Portfolio images{% endif %} in Greg Newman's Recent Work{% endblock %}
 
 {% block meta_keywords %}gallery, portfolio, greg newman, illustration, art, paintings, wildlife, sports, portraits, caricatures, sketches, drawings, motorcycle art, motorcycles, harley davidson{% endblock %}
 {% block meta_description %}Portfolio of Greg Newman's illustration work.  Wildlife, portrait and motorcycle paintings.{% endblock %}
