--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -878,6 +878,11 @@ span.total-shipping {
     margin: 20px 0 0 28px;
 }
 
+.product-title {
+    font-size: 1em;
+    margin: 10px 0;
+}
+
 
 
 /* #Tablet (Portrait)
