--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -879,7 +879,8 @@ span.total-shipping {
 }
 
 .product-title {
-    font-size: 1em;
+    width: 70%;
+    font-size: 1.4em;
     margin: 10px 0;
 }
 
