--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -291,7 +291,7 @@ span.total-discount, span.total-shipping { font-weight: bold; }
 
 #product-page .addthis_toolbox { margin: 20px 0 0 28px; }
 
-.product-title { font-size: 1em; margin: 10px 0; }
+.product-title { width: 70%; font-size: 1.4em; margin: 10px 0; }
 
 /* #Tablet (Portrait)
 ================================================== */
