--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -884,6 +884,13 @@ span.total-shipping {
     margin: 10px 0;
 }
 
+.product-status {
+    font-weight: bold;
+}
+
+.product-price {
+    margin: 0 !important;
+}
 
 
 /* #Tablet (Portrait)
