--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -293,6 +293,10 @@ span.total-discount, span.total-shipping { font-weight: bold; }
 
 .product-title { width: 70%; font-size: 1.4em; margin: 10px 0; }
 
+.product-status { font-weight: bold; }
+
+.product-price { margin: 0 !important; }
+
 /* #Tablet (Portrait)
 ================================================== */
 /* Note: Design for a width of 768px */
