--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -892,6 +892,10 @@ span.total-shipping {
     margin: 0 !important;
 }
 
+.product {
+    text-align: center;
+}
+
 
 /* #Tablet (Portrait)
 ================================================== */
