--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -297,6 +297,8 @@ span.total-discount, span.total-shipping { font-weight: bold; }
 
 .product-price { margin: 0 !important; }
 
+.product { text-align: center; }
+
 /* #Tablet (Portrait)
 ================================================== */
 /* Note: Design for a width of 768px */
