--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -888,12 +888,14 @@ span.total-shipping {
     font-weight: bold;
     width: 48%;
     float: right;
+    padding-right: 30px;
 }
 
 .product-price {
     margin: 0 !important;
     width: 48%;
     float: left;
+    padding-left: 30px;
 }
 
 .home .product {
