--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -892,7 +892,8 @@ span.total-shipping {
     margin: 0 !important;
 }
 
-.home .product {
+.home .product,
+#products-page .product {
     text-align: center;
 }
 
