margin under mini cart

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -897,6 +897,10 @@ span.total-shipping {
     text-align: center;
 }
 
+.minicart {
+    margin-bottom: 40px;
+}
+
 
 /* #Tablet (Portrait)
 ================================================== */
