--- a/templates/base.html
+++ b/templates/base.html
@@ -103,35 +103,11 @@
 
     <footer>
         <div class="container">
-            <img src="{{ STATIC_URL }}img/skull.png" class="skull" />
 
-            <div class="respect four columns">
-                <h3>Respectables</h3>
-                <ul>
-                    {% for person in people %}
-                    <li><a href="{{ person.url }}" target="_blank">{{ person.name }}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
-
-            <div class="six columns">
-                <div class="dribbble-shots">
-                    <h3>Latest Dribbble</h3>
-                    <div id="dribbble-shots"></div>
-                    <div class="clearfix"></div>
-                </div>
-
-                <div id="latest_tweet">
-                    <h3>From Twitter</h3>
-                    <div class="loading"></div>
-                </div>
-            </div>
-
-             <div class="copyright six columns">
+             <div class="copyright sixteen columns">
                 <h3>Legal</h3>
-                <p>&copy;2010 Greg Newman, All Rights Reserved.</p>
-                <p>Content, site design, images and illustrations may not be reproduced without written permission from Greg.</p>
-                <p>Social icons by the legendary taxidermist, <a href="http://rogieking.com">Rogie King</a>.</p>
+                <p>&copy;2010 Gregory Newman, All Rights Reserved.
+                Content, site design, images and illustrations may not be reproduced without written permission.</p>
             </div>
 
 
