--- a/templates/blog/entry_detail.html
+++ b/templates/blog/entry_detail.html
@@ -19,10 +19,10 @@
 
         <div class="closing">
             <p>Did this pull on your heart-strings? If you have a question or comment, feel free to contact me. I'll be happy to respond if you're coorespondance is manerly. </p>
-<a href="https://twitter.com/gregnewman" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @gregnewman</a>
+<a href="https://twitter.com/tuckerjoenz" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @tuckerjoenz</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</span>            <p><span class="twitter-follow-butotn">You should follow me on Twitter (@gregnewman).</p>
-            <p><a href="https://www.facebook.com/NewmanStudiosFineArt">Also on Facebook</a></p>
+</span>            <p><span class="twitter-follow-butotn">You should follow me on Twitter (@tuckerjoenz).</p>
+            <p><a href="https://www.facebook.com/tuckerjoenz">Also on Facebook</a></p>
         </div>
     </article>
     <aside class="three columns omega">
