--- a/templates/blog/home_page.html
+++ b/templates/blog/home_page.html
@@ -8,8 +8,8 @@
 
 {% block page_title %}Blog of Greg Newman's Recent Work and thoughts{% endblock %}
 
-{% block meta_keywords %}blog, journal, gallery, portfolio, greg newman, illustration, art, paintings, wildlife, sports, portraits, caricatures, sketches, drawings, motorcycle art, motorcycles, harley davidson{% endblock %}
-{% block meta_description %}Blog of Greg Newman's illustration work, sketches and thoughts.  Wildlife, portrait and motorcycle paintings.{% endblock %}
+{% block meta_keywords %}blog, journal, gallery, portfolio, tucker joenz, photography, commercial, editorial, food, music, architecture, architectural, conceptual, portraits, family, wedding, corporate, headshots{% endblock %}
+{% block meta_description %}Blog of Tucker Joenz Photography work, filmmaking and ramblings.{% endblock %}
 
 
 {% block content %}
