--- a/templates/contact_form/contact_form.html
+++ b/templates/contact_form/contact_form.html
@@ -2,20 +2,20 @@
 
 {% block body-class %}contact-body{% endblock %}
 
-{% block page_title %}Contact Greg Newman, the artist, illustrator and developer{% endblock %}
+{% block page_title %}Contact Tucker Joenz, the photographer and film maker{% endblock %}
 
-{% block meta_keywords %}Contact greg newman, illustration, illustrator, artist, designer, django, art, motorcycle, harley, harley art, painting, painter12, photoshop, watercolor, oil paint, drawing, sketching{% endblock %}
+{% block meta_keywords %}Contact tucker joenz, photographer, photography, commercial, architectural, designer, django, art, editorial, food, conceptual, music, nikon, photoshop, speedlights, studio, street photography, wedding{% endblock %}
 
 {% block meta_description %}
-    Contact Greg Newman, the freelance illustrator specializing in motorcycle, harley davidson, portrait, and wildlife illustrations; as well as design, and development for the intertubes.
+    Contact Tucker Joenz, the commercial photographer specializing in music, editorial, food, conceptual and architectural photography; as well as design, and development for the intervebz.
 {% endblock %}
 
 
 {% block content %} 
 <article>
     <div class="ten columns">
-        <h2>Contact Greg</h2> 
-        <p>Use the form below to contact Greg.  He's busy but he will reply (unless your a ruthless spammer bot thing).</p>
+        <h2>Contact Tucker</h2> 
+        <p>Use the form below to contact Tucker.  He is out shooting at the moment and will get back to you soon.</p>
 
         <div class="contact-form">
         {% if form.errors %} 
