--- a/templates/contact_form/contact_form_sent.html
+++ b/templates/contact_form/contact_form_sent.html
@@ -1,6 +1,6 @@
 {% extends "base-no-aside.html" %} 
 
-{% block title %}Thanks for contacting Greg{% endblock %} 
+{% block title %}Thanks for contacting Tucker{% endblock %} 
 
 {% block content %} 
 <article>
