--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
     <div class="about-copy rows">
-        <p>Newman Studios is an illustration, design and fine art studio located in Charlotte, North Carolina.  Greg Newman, is a recognized freelance artist specializing in portrait, wildlife, motorcyle and technical paintings and illustrations.  Greg also works as a <i>devigner</i> (designer & developer) servicing clients that include (but are not limited to) National Geographic, Discovery Channel and Broadway.  Newman Studios is accepting new projects and can be <a href="/contact/">contacted here</a>.</p>
+        <p>Tucker Joenz is a commercial photographer, concentrating on conceptual, music, editorial, food and architectural photography. Based out of Annapolis, Maryland BUT willing to travel to capture exactly what you need. Along with photography, Tucker has an extensive background in film and video production, editing and directing if you are in need of this service as well.  Tucker Joenz Photography is accepting new projects and can be <a href="/contact/">contacted here</a>.</p>
     </div>
     <div class="portfolio-thumbs rows">
         {% for work in works %}
