--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -13,43 +13,31 @@
 
 /* ` Block Level Elements
 ----------------------------------------------------------------------------*/
-body { background: #824013; }
+body { background: #858585; }
 
-nav { position: relative; height: 43px; background: #5b5853; }
+section { padding: 0 0 60px 0; }
 
-header { background-color: #eeeae4; background-image: -webkit-gradient(linear, left top, left bottom, from(#eeeae4), to(#dfd8ca)); background-image: -webkit-linear-gradient(top, #eeeae4, #dfd8ca); background-image: -moz-linear-gradient(top, #eeeae4, #dfd8ca); background-image: -o-linear-gradient(top, #eeeae4, #dfd8ca); background-image: -ms-linear-gradient(top, #eeeae4, #dfd8ca); background-image: linear-gradient(top, #eeeae4, #dfd8ca); filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#eeeae4', EndColorStr='#dfd8ca'); height: 200px; margin-bottom: 40px; position: relative; }
-
-header:after { content: ''; position: absolute; top: 180px; left: 0; height: 90px; display: block; width: 100%; background: #efebe3; transform: rotate(1deg); -ms-transform: rotate(1deg); /* IE 9 */ -moz-transform: rotate(1deg); /* Firefox */ -webkit-transform: rotate(1deg); /* Safari and Chrome */ -o-transform: rotate(1deg); /* Opera */ }
-
-header h1 { position: absolute; top: 35px; left: -10px; }
-
-section { background: #efebe3; padding: 0 0 60px 0; }
-
-footer { position: relative; background: #824013; margin: 40px 0 0 0; padding: 50px 0 20px 0; color: #fff; font: 14px/21px "MerriweatherLight", Arial, sans-serif; }
-
-footer:before { content: ''; position: absolute; top: -70px; left: 0; height: 50px; display: block; width: 100%; background: #efebe3; transform: rotate(-1deg); -ms-transform: rotate(-1deg); /* IE 9 */ -moz-transform: rotate(-1deg); /* Firefox */ -webkit-transform: rotate(-1deg); /* Safari and Chrome */ -o-transform: rotate(-1deg); /* Opera */ }
+footer { position: relative; background: #d1d1d1; margin: 40px 0 0 0; padding: 50px 0 20px 0; color: #000; font: 14px/21px "MerriweatherLight", Arial, sans-serif; }
 
 footer a, footer a:active, footer a:visited { color: #fff; }
 
 /* ` Header and Nav Elements
 ----------------------------------------------------------------------------*/
-.bike { height: 204px; width: 379px; position: absolute; top: 25px; right: -45px; background: url(../img/46harley-logo.png) no-repeat top left; z-index: 9; }
+.logo { width: 55%; margin: 40px auto; }
 
-.navbar ul { margin: 0; padding: 0; }
+.logo img { max-width: 100%; margin: 0 auto;}
+
+.navbar ul { margin: 0 auto; padding: 0; width: 80%; }
 
 .navbar ul li { float: left; font-family: "franklin-gothic-urw-cond-1","franklin-gothic-urw-cond-2",sans-serif; font-style: normal; font-weight: 400; font-size: 24px; text-transform: uppercase; letter-spacing: 0; }
 
-.navbar a { text-decoration: none; color: #fff; padding: 0 6px; line-height: 43px; }
+.navbar a { text-decoration: none; color: #d1d1d1; padding: 0 20px; line-height: 43px; }
 
-.navbar a:hover { color: #f4dcac; }
+.navbar a:hover { color: #fff; }
 
-.navbar li.shop-link { padding-left: 15px; background: black url(../img/shop_nav_bg.png) no-repeat left bottom; }
+.about .about-nav a, .commissions .commissions-nav a, .portfolio-body .portfolio-nav a, .journal-body .journal-nav a, .contact-body .contact-nav a { color: #7cb3ff; }
 
-.navbar ul li.shop-link a, .navbar ul li.shop-link a:visited { background: #000; padding-right: 10px; color: #f4dcac; font-family: "franklin-gothic-urw-cond-1","franklin-gothic-urw-cond-2",sans-serif; font-style: normal; font-weight: 700; }
-
-.about .about-nav a, .commissions .commissions-nav a, .portfolio-body .portfolio-nav a, .journal-body .journal-nav a, .contact-body .contact-nav a { color: #f4dcac; }
-
-.social ul { margin: 8px 0 0 0; padding: 0; z-index: 9999; }
+/*.social ul { margin: 8px 0 0 0; padding: 0; z-index: 9999; }
 
 .social ul li { float: right; margin: 0 15px; padding: 0; }
 
@@ -75,7 +63,7 @@ li.facebook a:hover { background: url(../img/icon-facebook-on.png) no-repeat top
 
 li.flickr a:hover { background: url(../img/icon-flickr-on.png) no-repeat top left; }
 
-li.behance a:hover { background: url(../img/icon-behance-on.png) no-repeat top left; }
+li.behance a:hover { background: url(../img/icon-behance-on.png) no-repeat top left; }*/
 
 /* ` Standard Elements
 ----------------------------------------------------------------------------*/
@@ -119,13 +107,13 @@ blockquote { font: 18px/27px "MerriweatherBold", Arial, sans-serif; color: #333;
 ----------------------------------------------------------------------------*/
 form { margin: 30px auto; position: relative; font: 18px/27px "MerriweatherRegular", Arial, sans-serif; }
 
-.formrow { width: 630px; background: #e0d9ca; border: 0; -moz-border-radius: 5px; -webkit-border-radius: 5px; margin-bottom: 4px; padding: 10px; }
+.formrow { width: 630px; background: #6e6e6e; border: 0; -moz-border-radius: 5px; -webkit-border-radius: 5px; margin-bottom: 4px; padding: 10px; }
 
 .formrow span { display: block; color: #999999; margin-left: 210px; }
 
 form label { display: block; float: left; width: 200px; margin: 0 5px 2px 0; font-size: 0.9em; line-height: 1.5em; font-weight: bold; text-align: left; }
 
-label.required { color: #b6764c; }
+label.required { color: #fff; }
 
 form input[type=text], form input[type=password] { width: 250px; padding: 3px 8px; color: #333; border: 1px solid #000; }
 
@@ -139,7 +127,7 @@ form input[type=text]:focus, form textarea:focus, form select:focus { color: #00
 
 .errorlist { color: #fff; background: #f33; font-size: 11px; font-weight: bold; text-align: center; padding: 3px 10px; list-style: none; float: left; width: 330px; }
 
-button { background-color: #ae5a31; background-image: -webkit-gradient(linear, left top, left bottom, from(#ae5a31), to(#7f4121)); background-image: -webkit-linear-gradient(top, #ae5a31, #7f4121); background-image: -moz-linear-gradient(top, #ae5a31, #7f4121); background-image: -o-linear-gradient(top, #ae5a31, #7f4121); background-image: -ms-linear-gradient(top, #ae5a31, #7f4121); background-image: linear-gradient(top, #ae5a31, #7f4121); filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#ae5a31', EndColorStr='#7f4121'); border: 0; -moz-border-radius: 5px; -webkit-border-radius: 5px; padding: 6px 10px; outline: 0; border: 0; cursor: pointer; color: #fff; margin: 10px 10px 10px 220px; font: 14px/21px "MerriweatherRegular", Arial, sans-serif; }
+button { background-color: #ae5a31; background-image: -webkit-gradient(linear, left top, left bottom, from(#463d38), to(#000000)); background-image: -webkit-linear-gradient(top, #463d38, #000000); background-image: -moz-linear-gradient(top, #463d38, #000000); background-image: -o-linear-gradient(top, #463d38, #000000); background-image: -ms-linear-gradient(top, #463d38, #000000); background-image: linear-gradient(top, #463d38, #000000); filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#463d38', EndColorStr='#7f4121'); border: 0; -moz-border-radius: 5px; -webkit-border-radius: 5px; padding: 6px 10px; outline: 0; border: 0; cursor: pointer; color: #fff; margin: 10px 10px 10px 220px; font: 14px/21px "MerriweatherRegular", Arial, sans-serif; }
 
 button:hover { color: #fff; }
 
@@ -179,127 +167,13 @@ aside { margin-top: 94px; font: 14px/21px "MerriweatherRegular", Arial, sans-ser
 
 footer p, footer ul { font: 14px/21px "MerriweatherRegular", Arial, sans-serif; }
 
-footer h3 { color: #F4DCAC; }
+footer h3 { color: #858585; }
 
 .respect a, .respect a:visited { text-decoration: none; }
 
 #latest_tweet { margin-top: 50px; }
 
 .dribbble-shots img { border: 6px solid #000; }
-
-/* ` Store View Elements
-----------------------------------------------------------------------------*/
-#navigation li { font-size: 0.8em; }
-
-#home-page .product, #products-page .product { float: left; width: 50%; }
-
-#product-images .product-img { margin: 0 0 10px 0; }
-
-#product-images .images-nav { position: relative; width: 300px; height: 28px; margin: 10px 0 0 0; }
-
-#product-images .images-list { position: absolute; top: 0; left: 28px; padding: 7px 0 8px 0; }
-
-#product-images .images-list li { display: inline; padding: 0 5px; list-style: none; border-left: 1px solid #666; }
-
-#product-images .images-list li.image-1 { border-left: none; }
-
-#product-images .images-prev { position: absolute; top: 0; left: 0; padding: 5px; }
-
-#product-images .images-next { position: absolute; top: 0; right: 0; padding: 5px; }
-
-#product-images .images-prev a { display: block; width: 18px; height: 18px; background: url("btn-prev.gif") no-repeat; }
-
-#product-images .images-next a { display: block; width: 18px; height: 18px; background: url("btn-next.gif") no-repeat; }
-
-#product-images .images-prev span, #product-images .images-next span { display: none; }
-
-#product-page button { margin-left: 0 !important; }
-
-/*============================================================ Cart
-============================================================*/
-#cart-table { text-align: left; width: 100%; border-collapse: collapse; border-spacing: 0; }
-
-#cart-table td, #cart-table th { text-align: left; }
-
-#update-btn-head { display: none; }
-
-/* Cart Table Header ---------------------------------------*/
-#cart-head { color: #fff; background: #824013; }
-
-#cart-head th { padding-top: 11px; padding-bottom: 11px; }
-
-#head-item { padding-left: 10px; }
-
-/* Cart Table Columns --------------------------------------*/
-#col-item { width: 337px; }
-
-#col-price { width: 65px; }
-
-#col-qty { width: 40px; }
-
-#col-total { width: 65px; }
-
-#col-options { width: 30px; }
-
-/* Cart Table Body -----------------------------------------*/
-#cart-body th { padding-left: 10px; font-weight: normal; }
-
-#cart-body td { padding: 9px 12px 9px 0; }
-
-#cart-body .item-price { padding-right: 5px; }
-
-#cart-body .item-qty input { width: 2em; }
-
-#cart-body .item-total { font-weight: bold; }
-
-#cart-body .item-options { text-align: center; }
-
-#cart-body .item-options .remove-btn { cursor: pointer; display: block; }
-
-/* Cart Footer ---------------------------------------------*/
-#cart-footer { margin: 10px 0; }
-
-#cart-footer .cart-update { padding: 10px 0; text-align: right; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; }
-
-#cart-footer .update-btn { cursor: pointer; }
-
-#cart-footer .cart-shipping { float: left; display: inline; margin: -31px 0 0 11px; }
-
-#cart-footer #country { width: 160px; margin-left: 5px; padding: 2px 0; font-size: 11px; }
-
-#cart-footer .cart-discount { padding: 10px 0; border-bottom: 1px solid #ddd; text-align: right; }
-
-#cart-footer #cart_discount_code { width: 80px; margin-left: 10px; }
-
-#cart-footer .cart-discount p { margin: 1px 0; }
-
-#cart-footer .cart-total { padding: 15px 0; text-align: right; border-bottom: 1px solid #ddd; }
-
-#cart-footer .cart-total h3 { font-size: 16px; margin: 0; }
-
-#cart-footer .cart-total p { margin-bottom: 0; font-size: 9px; color: #999; }
-
-#cart-footer .cart-total #cart-shipping-tax p { margin-bottom: 7px; font-size: 11px; color: #666; }
-
-#cart-footer .cart-options { float: right; margin-top: 10px; }
-
-#cart-footer .cart-checkout { float: left; }
-
-#cart-footer .checkout-btn { margin-left: 8px; cursor: pointer; }
-
-span.total-discount, span.total-shipping { font-weight: bold; }
-
-#product-page .addthis_toolbox { margin: 20px 0 0 28px; }
-
-.product-title { width: 175px; font-size: 1.4em; margin: 10px auto; }
-
-.product-status { font-weight: bold; }
-
-.product-price { margin: 0 !important; }
-
-.home .product, #products-page .product { text-align: center; }
-
-#minicart { margin-bottom: 40px; }
 
 /* #Tablet (Portrait)
 ================================================== */
