minor changes to layout

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,10 @@
 
 <body id="tuckerjoenz-com" class="{% block body-class %}base{% endblock %}">
     
+    <div id="top-bar" class="clearfix">
+
+    </div>>
+
     <header>
         <div class="container sixteen columns">
             <div class="logo nine columnz alpha">
