--- a/static_dev/css/screen.css
+++ b/static_dev/css/screen.css
@@ -13,6 +13,8 @@
 
 /* ` Block Level Elements
 ----------------------------------------------------------------------------*/
+#top-bar { background: #000; width: 100%; height: 30px; top: 0; border-bottom: 2px solid #7cb3ff; }
+
 body { background: #858585; }
 
 section { padding: 0 0 60px 0; }
