--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "site_base.html" %}
 
 {% block content %}
-    <p>Oops!  Looks like you're lookin' for something that just does not exist!  Try again!</p>
+    <p>Oops!  That could have got messy! Try again!</p>
 {% endblock %}
