--- a/templates/500.html
+++ b/templates/500.html
@@ -1,5 +1,5 @@
 {% extends "site_base.html" %}
 
 {% block content %}
-    <p>C'mon Man!!  You Broke it!!</p>
+    <p>Ok, you bought it this time!!</p>
 {% endblock %}
