--- a/templates/base.html
+++ b/templates/base.html
@@ -75,11 +75,11 @@
             </div>
             <div class="navbar sixteen columns alpha">
                 <ul class="clearfix">
-                    <li class="about-nav"><a href="/about/" title="About Greg Newman">About</a></li>
+                    <li class="about-nav"><a href="/about/" title="About Tucker Joenz">About</a></li>
                     <li class="commissions-nav"><a href="/prices/" title="Prices for Photgraphy">Pricing</a></li>
-                    <li class="journal-nav"><a href="/journal/" title="Greg's blog">Journal</a></li> 
+                    <li class="journal-nav"><a href="/journal/" title="Tucker's Photography blog">Journal</a></li> 
                     <li class="portfolio-nav"><a href="/portfolio/" title="Recent work">Gallery</a></li>
-                    <li class="contact-nav"><a href="/contact/" title="Contact Greg">Contact</a></li>
+                    <li class="contact-nav"><a href="/contact/" title="Contact Tucker">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -96,7 +96,18 @@
     <footer>
         <div class="container">
 
-             <div class="copyright sixteen columns">
+            <div class="social sixteen columns">
+                <ul class="clearfix">
+                    <li class="twitter"><a href="http://twitter.com/gregnewman"></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/tuckerjoenz"></a></li>
+                    <li class="flickr"><a href="http://www.flickr.com/photos/digibonez/"></a></li>
+                    <li class="behance"><a href="http://www.behance.net/tuckerjoenz"></a></li>
+                    <li class="pinterest"><a href="http://pinterest.com/tuckerjoenz"></a></li>
+                    <li class="google-plus"><a href="https://plus.google.com/u/0/105921207503269128007/posts"></a></li>
+                </ul>
+            </div>
+
+            <div class="copyright sixteen columns">
                 <h3>Legal</h3>
                 <p>&copy;2012 Tucker Joenz, All Rights Reserved.
                 Content, site design and images may not be reproduced without written permission.</p>
