--- a/templates/blog/home_page.html
+++ b/templates/blog/home_page.html
@@ -6,7 +6,7 @@
 
 {% block body-class %}journal-body{% endblock %}
 
-{% block page_title %}Blog of Greg Newman's Recent Work and thoughts{% endblock %}
+{% block page_title %}Blog of Tucker Joenz's recent photography and insights{% endblock %}
 
 {% block meta_keywords %}blog, journal, gallery, portfolio, tucker joenz, photography, commercial, editorial, food, music, architecture, architectural, conceptual, portraits, family, wedding, corporate, headshots{% endblock %}
 {% block meta_description %}Blog of Tucker Joenz Photography work, filmmaking and ramblings.{% endblock %}
