--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,10 +3,10 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>{% block page_title %}Greg Newman - Illustrator. Devigner.{% endblock %}</title>
+    <title>{% block page_title %}Tucker Joenz - Photographer. Devigner.{% endblock %}</title>
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
-<meta http-equiv="REFRESH" content="0;url=http://gregnewman.org/journal/"></HEAD>
+<meta http-equiv="REFRESH" content="0;url=http://tuckerjoenz.com/journal/"></HEAD>
     {% compress css %}
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/reset.css" media="screen" />
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/screen.css" media="screen" />
@@ -16,7 +16,7 @@
     {% endcompress %}
     <script src="http://mint.gregnewman.org/?js" type="text/javascript"></script>
 </head>
-<body id="gregnewman-com" class="{% block body-class %}base{% endblock %}">
+<body id="tuckerjoenz-com" class="{% block body-class %}base{% endblock %}">
 
 </body>
 </html>
