--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block page_title %}Website of Greg Newman, Illustrator and Artist{% endblock %}
+{% block page_title %}Website of Tucker Joenz's recent photography and insights{% endblock %}
 
-{% block meta_keywords %}Newman Studios, gallery, portfolio, greg newman, illustration, art, paintings, wildlife, motorcycles, harley davidson, sports, portraits, , sketches, drawings, harley-davidson art, harley davidson paintings, harley-davidson, motorcycle art, vintage art, artwork, fine art, prints, designer apparel, t-shirts, illustration{% endblock %}
-{% block meta_description %}Greg Newman's recent illustration, store and blog.  Wildlife, portrait and motorcycle paintings.{% endblock %}
+{% block meta_keywords %}Tucker Joenz Photography, blog, journal, gallery, portfolio, tucker joenz, photography, commercial, editorial, food, music, architecture, architectural, conceptual, portraits, family, wedding, corporate, headshots{% endblock %}
+{% block meta_description %}Tucker Joenz recent work of photography and filmmaking, always digging deeper into the conceptual ideas. Also images of editorial, food, architecture work.{% endblock %}
 
 {% block content %}
 <div class="home-banner"><img src="{{ STATIC_URL }}img/home-1.png" /></div>
