--- a/templates/portfolio/index.html
+++ b/templates/portfolio/index.html
@@ -2,10 +2,10 @@
 
 {% block body-class %}portfolio-body{% endblock %}
 
-{% block page_title %}{% if tag %}Tagged Portfolio images matching {{ tag }}{% else %}Portfolio images{% endif %} in Greg Newman's Recent Work{% endblock %}
+{% block page_title %}{% if tag %}Tagged Portfolio images matching {{ tag }}{% else %}Portfolio images{% endif %} in Tucker Joenz's Recent Work{% endblock %}
 
-{% block meta_keywords %}gallery, portfolio, greg newman, illustration, art, paintings, wildlife, sports, portraits, caricatures, sketches, drawings, motorcycle art, motorcycles, harley davidson{% endblock %}
-{% block meta_description %}{% if tag %}Tagged Portfolio images matching {{ tag }}{% else %}Portfolio images{% endif %} in Greg Newman's illustration work.  Wildlife, portrait and motorcycle paintings. {{ tag }}{% endblock %}
+{% block meta_keywords %}blog, journal, gallery, portfolio, tucker joenz, photography, commercial, editorial, food, music, architecture, architectural, conceptual, portraits, family, wedding, corporate, headshots{% endblock %}
+{% block meta_description %}{% if tag %}Tagged Portfolio images matching {{ tag }}{% else %}Portfolio images{% endif %} in Tucker Joenz's photography work.  Conceptual, editorial, food and architectural work. {{ tag }}{% endblock %}
 
 {% block content %}
     <div class="portfolio-thumbs">
