--- a/templates/base.html
+++ b/templates/base.html
@@ -49,15 +49,16 @@
 
     <script type="text/javascript">
 
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-12316735-1']);
-      _gaq.push(['_trackPageview']);
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-26252361-1']);
+        _gaq.push(['_setDomainName', 'tuckerjoenz.com']);
+        _gaq.push(['_trackPageview']);
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
 
     </script>
 </head>
@@ -98,7 +99,7 @@
 
             <div class="social sixteen columns">
                 <ul class="clearfix">
-                    <li class="twitter"><a href="http://twitter.com/gregnewman"></a></li>
+                    <li class="twitter"><a href="http://twitter.com/tuckerjoenz"></a></li>
                     <li class="facebook"><a href="https://www.facebook.com/tuckerjoenz"></a></li>
                     <li class="flickr"><a href="http://www.flickr.com/photos/digibonez/"></a></li>
                     <li class="behance"><a href="http://www.behance.net/tuckerjoenz"></a></li>
